--- a/public/post/FreeBSD/Localization.pod
+++ b/public/post/FreeBSD/Localization.pod
@@ -7,24 +7,48 @@ Localization - FreeBSD 의 언어 설정.
 
 =head1 SYNOPSIS
 
+=begin html
+
+<pre><code class="plaintext"> 
  ex) ko_KR.UTF-8
  ex) en_US.ISO8859-1
+</code></pre>
+
+=end html
 
 =head1 LOCALIZATION
 
 B<locale name> 은 세 부분으로 구성된다.
 
+=begin html
+
+<pre><code class="plaintext">
  # 언어코드_나라코드.인코딩
  ex) ko_KR.UTF-8
  ex) en_US.ISO8859-1
+</code></pre>
+
+=end html
 
 다음 명령어로 사용 가능한 언어를 확인할 수 있다.
 
+=begin html 
+
+<pre><code class="shell"> 
  % locale -a
+</code></pre>
+
+=end html
 
 다음 명령어로 현재 locale 설정을 확인할 수 있다.
 
+=begin html
+
+<pre><code class="shell"> 
  % locale
+</code></pre>
+
+=end html
 
 =head2 Setting locale
 
@@ -50,11 +74,23 @@ login class 는 모든 사용자가 가지고 있는 값으로,
 I<vipw> 를 이용해서 사용자가 어떤 login class 를 지정받았는지 확인할 수 있으며
 변경도 가능하다.
 
+=begin html
+
+<pre><code class="plaintext"> 
  user:password:1111:11:Login Class:0:0:User Name:/home/user:/bin/sh
+</code></pre>
+
+=end html
 
 B<default> 라면 B<Login Class> 값이 비어있다.
 
+=begin html
+
+<pre><code class="plaintext"> 
  user:password:1111:11::0:0:User Name:/home/user:/bin/sh
+</code></pre>
+
+=end html
 
 =head3 login configuration
 
@@ -67,9 +103,15 @@ B<default> 라면 B<Login Class> 값이 비어있다.
 
 I<~/.login_conf> 파일에 다음을 작성한다.
 
+=begin html
+
+<pre><code class="yaml"> 
  me:\
     :charset=UTF-8:\
     :lang=ko_KR.UTF-8:
+</code></pre>
+
+=end html
 
 이 방법으로 사용자가 로그인 할 때 locale 을 지정해 줄 수 있다.
 
@@ -77,6 +119,9 @@ I<~/.login_conf> 파일에 다음을 작성한다.
 
 I</etc/login.conf> 에 다음을 작성한다.
 
+=begin html
+
+<pre><code class="yaml"> 
  # Login_Class|Account Type Description:\
  #  :charset=MM_CHARSET:\
  #  :lang=LANG:\
@@ -87,10 +132,20 @@ I</etc/login.conf> 에 다음을 작성한다.
     :charset=UTF-8:\
     :lang=ko_KR.UTF-8:\
     :tc=default:
+</code></pre>
+
+=end html
+
 
 수정이 끝난 후 데이터베이스를 업데이트 하기 위해 다음의 명령어를 입력한다.
 
+=begin html
+
+<pre><code class="shell"> 
  # cap_mkdb /etc/login.conf
+</code></pre>
+
+=end html
 
 이 방법으로 시스템 관리자가 특정 login class 를 가진 사용자의 locale 을 지정할 수 있다.
 
@@ -102,8 +157,13 @@ B<me>, B<korean>, B<default> 는 login class 를 나타낸다.
 
 B<tc> 는 다음과 같다.
 
+=begin html
+
+<pre><code class="plaintext"> 
  # entry 는 login class 를 의미한다.
  tc= in capability databases is an "include" directive - it means that the specified entry is treated as if it were included at that point
+</code></pre>
 
+=end html
 =cut
 
