--- a/public/post/Perl/Exporter.pod
+++ b/public/post/Perl/Exporter.pod
@@ -9,21 +9,39 @@ Exporter - 모듈의 기본 I<import> 메소드를 구현
 
 B<YourModule.pm> : 
 
+=begin html
+
+<pre><code class="perl">
  package YourModule;
  require Exporter;
  our @ISA = qw(Exporter);
  our @EXPORT_OK = qw(munge frobnicate);  # symbols to export on request
+</code></pre>
+
+=end html
 
 ==
 
- ackage YourModule;
+=begin html
+
+<pre><code class="perl">
+ package YourModule;
  use Exporter 'import'; # gives you Exporter's import() method directly
  our @EXPORT_OK = qw(munge frobnicate);  # symbols to export on request
+</code></pre>
+
+=end html
 
 다른 프로그램에서 B<YourModule>을 사용하기 원한다면 다음과 같이 작성하면 된다.
 
+=begin html
+
+<pre><code class="perl">
  use YourModule qw(frobnicate);      # import listed symbols
  frobnicate ($left, $right)          # calls YourModule::frobnicate
+</code></pre>
+
+=end html
 
 =head1 DESCRIPTION
 
@@ -40,8 +58,14 @@ Exporter는 일반적인 경우에 최적화된 구현과 유연한 인터페이
 symbol은 function, scalar, array, hash, typeglob를 나타낸다. 
 symbol은 함수의 앰퍼샌드를 제외하고는 모두 풀네임으로 작성되어야 한다.
 
+=begin html
+
+<pre><code class="perl">
  our @EXPORT    = qw(afunc $scalar @array);   # afunc is a function
  our @EXPORT_OK = qw(&bfunc %hash *typeglob); # explicit prefix on &bfunc
+</code></pre>
+
+=end html
 
 =head2 Selecting What to Export
 
@@ -64,15 +88,33 @@ export하는 것은 사용자의 네임스페이스를 오염시킬 수 있다.
 
 모듈을 로드하고 symbol을 import하여 사용하는 방법에는 세 가지 방법이 있다.
 
+=begin html
+
+<pre><code class="perl">
  use YourModule;
+</code></pre>
+
+=end html
 
 : B<use>를 사용한 네임스페이스에 YourModule의 I<@EXPORT> symbol을 모두 import한다.
 
+=begin html
+
+<pre><code class="perl">
  use YourModule ();
+</code></pre>
+
+=end html
 
 : 모듈은 로드하지만 아무런 symbol도 import하지 않는다.
 
+=begin html
+
+<pre><code class="perl">
  use YourModule qw(...);
+</code></pre>
+
+=end html
 
 : 작성된 symbol만 네임스페이스로 import한다.
 모든 symbol은 I<@EXPORT> 또는 I<@EXPORT_OK>에 추가되어야 하며 그렇지 않으면 에러가 발생한다.
@@ -90,8 +132,14 @@ Exporter의 고급 기능을 알고 싶지 않다면 여기까지가 Exporter의
 
 B<Exporter>를 I<strict>, I<warnings>와 함께 사용하면 패키지 변수 I<@EXPORT_OK>, I<@EXPORT>, I<@ISA> 등에는 I<our>를 붙여줘야 한다.
 
+=begin html
+
+<pre><code class="perl">
  our @ISA = qw(Exporter);
  our @EXPORT_OK = qw(munge frobnicate);
+</code></pre>
+
+=end html
 
 =head2 Playing Safe
 
@@ -100,13 +148,22 @@ I<require Exporter>과 패키지 변수에 할당하는 것과 같은 런타임 
 
 이것에 대해 생각하지 않는 이상적인(지저분하지만) 방법은 I<BEGIN> 블록을 사용하는 것이다.
 
+=begin html
+
+<pre><code class="perl">
  package YourModule;
  require Exporter;
  our @ISA = qw(Exporter);
  our @EXPORT_OK = qw(munge frobnicate);  # symbols to export on request
+</code></pre>
+
+=end html
 
 위의 코드는 다음처럼 바뀔 수 있다.
 
+=begin html
+
+<pre><code class="perl">
  package YourModule;
 
  use strict;
@@ -118,20 +175,35 @@ I<require Exporter>과 패키지 변수에 할당하는 것과 같은 런타임 
     @ISA = qw(Exporter);
     @EXPORT_OK = qw(munge frobnicate);  # symbols to export on request
  }
+</code></pre>
+
+=end html
 
 I<BEGIN>은 B<Exporter.pm> 모듈의 로드와 I<@ISA>, I<@EXPORT_OK>로의 할당이 즉시 일어나게 한다.
 B<Exporter> 로딩과 상속에는 I<base>, I<parent>와 같은 대안책이 존재한다.
 
+=begin html
+
+<pre><code class="perl">
  use base qw(Exporter);
  # or
  use parent qw(Exporter);
+</code></pre>
+
+=end html
 
 이것은 
 
+=begin html
+
+<pre><code class="perl">
  BEGIN { 
  	require Exporter; 
  	@ISA = qw(Exporter); 
  }
+</code></pre>
+
+=end html
 
 에 대한 좋운 대안책이다.
 차이점은, I<base>는 선언된 I<field>와 상호작용하는 반면 I<parent>는 IS-A 관계를 만들기 위해 과거의 I<base>의 버전을 간소화한 것이다.
@@ -141,11 +213,17 @@ B<Exporter> 로딩과 상속에는 I<base>, I<parent>와 같은 대안책이 존
 런타임이냐 컴파일타임이냐에 대한 해결책은 L<Exporter::Easy|https://metacpan.org/pod/Exporter::Easy>를 사용하는 것이다.
 이는 I<use>의 모든 boilerplate를 해결해준다.
 
+=begin html
+
+<pre><code class="perl">
  use Exporter::Easy (
  	OK => [ qw(munge frobnicate) ],
  );
  # @ISA setup is automatic
  # all assignments happen at compile time
+</code></pre>
+
+=end html
 
 =head2 What Not to Export
 
@@ -163,7 +241,13 @@ B<Exporter> 로딩과 상속에는 I<base>, I<parent>와 같은 대안책이 존
 
 여기에 한 가지가 더 추가된다. B<변수를 export하지 말자.>
 
+=begin html
+
+<pre><code class="perl">
  @EXPORT_OK = qw($svar @avar %hvar); # DON'T!
+</code></pre>
+
+=end html
 
 set/get을 위해서는 accessor를 제공하는 것이 최선이다.
 
