--- a/public/post/FreeBSD/Shell/StartupFiles.pod
+++ b/public/post/FreeBSD/Shell/StartupFiles.pod
@@ -36,7 +36,7 @@ ex) Change to other user
 
 ex) Open terminal
 
-=item * interactive login shell - B</etc/profile>, B<~/.profile>, ...
+=item * non-interactive login shell - B</etc/profile>, B<~/.profile>, ...
 
 ex) Default Login on boot
 
