--- a/public/post/Vimscript/Learn_Vimscript_The_Hard_Way.pod
+++ b/public/post/Vimscript/Learn_Vimscript_The_Hard_Way.pod
@@ -120,7 +120,6 @@ value 를 받는 옵션은 다음처럼 값 변경이 가능하다.
 
 =end html
 
-
 =head2 Setting Multiple Options at Once
 
 다음처럼 여러 옵션을 한 번에 설정하는 것이 가능하다.
@@ -325,7 +324,7 @@ B<sv> 명령어를 사용하면 vimrc 파일을 현재 vim 에 적용시킨다.
 
 이제 "I don't know waht should I do" 를 직접 입력해보자.
 
-이 mapping 은 입력모드에서 vim 이 입력받은 특정 단어를 다음의 단어로 교체해주는
+이 mapping 은 insert mode 에서 vim 이 입력받은 특정 단어를 다음의 단어로 교체해주는
 기능을 한다. 오타 수정에 쓰이며 특정 단어에 대한 약어를 지정할 수도 있다.
 
 =head1 Disable mapping
@@ -342,7 +341,7 @@ B<sv> 명령어를 사용하면 vimrc 파일을 현재 vim 에 적용시킨다.
 
 =end html
 
-이 mapping 을 만들어 두면 입력모드에서 <esc> 는 더이상 동작하지 않는다.
+이 mapping 을 만들어 두면 insert mode 에서 <esc> 는 더이상 동작하지 않는다.
 
 * <esc> 의 대체 mapping 은 <c-c>, <c-[> 가 있으니 당황하지 말고 빠져나오자.
 
@@ -405,5 +404,400 @@ B<sv> 명령어를 사용하면 vimrc 파일을 현재 vim 에 적용시킨다.
 =end html
 
 첫 번째 명령이 더 명시적이기 때문에 두 번째 명령은 동작하지 않는다.
+
+=head1 Autocommands
+
+vim 이 이벤트 발생을 감지하고 특정 명령을 수행하도록 autocommand 를 만들어보자.
+
+=begin html
+
+<pre><code class='vim hljs'>
+:autocmd BufNewFile * :write
+</code></pre>
+
+=end html
+
+=over 4
+
+
+=item * :autocmd
+
+autocommand 의 시작.
+
+=item * BufNewFile
+
+이벤트, 이벤트 목록을 알고 싶다면 I<:help autocmd-events> 를 찾아보자.
+
+=item * *
+
+패턴
+
+=item * :write
+
+명령어
+
+=back
+
+예시, 현재 작성중인 파일의 종류를 패턴으로 확인하고 매치된다면 주석 명령어를 추가.
+
+=begin html
+
+<pre><code class='vim hljs'>
+:autocmd FileType perl nnoremap <buffer> <localleader>c I#<esc>
+</code></pre>
+
+=end html
+
+=head1 Buffer-Local abbreviations
+
+바로 앞에서 배웠던 autocmd 와 iabbrev 을 조합해 새로운 명령어를 만들어보자.
+
+=begin html
+
+<pre><code class='vim hljs'>
+:autocmd FileType perl :iabbrev <buffer> iff if () {<left><left><left>
+</code></pre>
+
+=end html
+
+=head1 Autocommand Groups
+
+다음의 autocommand 를 지정해보자.
+
+=begin html
+
+<pre><code class='vim hljs'>
+:autocmd BufWrite * :echom "Writing buffer!"
+</code></pre>
+
+=end html
+
+그리고 같은 autocommand 를 다시 지정해보자.
+
+앞에서 autocommand 의 동작을 배웠다면 이 명령어가 어떻게 동작하는지 알 것이다.
+
+파일을 저장하면 Writing buffer 를 출력하라!
+
+파일을 저장하면 어떤 일이 발생할까?
+
+Writing buffer 가 두 번 출력될 것이다.
+
+이유는 vim 이 같은 이벤트에 여러가지 명령을 넣을 수 있도록 허용하기 때문이다.
+
+이를 해결하기 위해서 다음의 autocmd 그룹을 만들어보자.
+
+=begin html
+
+<pre><code class='vim hljs'>
+:augroup filetype_html
+:    autocmd Bufwrite * :echom "Foo"
+:    autocmd Bufwrite * :echom "Bar"
+:augroup END
+
+:augroup filetype_html
+:    autocmd Bufwrite * :echom "Baz"
+:augroup END
+</code></pre>
+
+=end html
+
+이제 파일을 저장한다면 어떤 동작을 할까?
+
+Baz 가 출력되기를 예상했다면 잘못됐다. 세 개의 단어가 모두 출력된다.
+
+예상했던 동작을 원한다면,
+
+=begin html
+
+<pre><code class='vim hljs'>
+:augroup filetype_html
+:    autocmd!
+:    autocmd Bufwrite * :echom "Baz"
+:augroup END
+
+</code></pre>
+
+=end html
+
+처럼 autocmd! 를 앞에서 실행시켜야 한다. 이 명령어는 모든 autocmd 를 제거하는 기능을 하는데,
+augroup 안에 위치하게 되면 같은 이름을 가진 augroup 에 대해서만 기능을 수행한다.
+
+vimrc 파일에, 모든 autocommand 에 대해 다음처럼 이벤트별 그룹을 지정해놓는 것이 좋을지 모르겠다 (내 생각)
+
+=begin html
+
+<pre><code class='vim hljs'>
+augroup event
+    autocmd!
+    autocmd event pattern command
+augroup event
+</code></pre>
+
+=end html
+
+=head1 Operator-Pending Mappings
+
+operator 란 무엇일까? 사용자의 movement command 를 기다리고, 현재 커서의 위치에서 입력받은 movement 만큼 특정 동작을 하는 것을 말한다.
+
+다음처럼 말이다.
+
+=over 4
+
+=item * dw
+
+operator - Delete, movement - to next word
+
+=item * ci(
+
+operator - Change, movement - inside parens
+
+=item * yt,
+
+operator - Yank, movement - until comma
+
+=back
+
+이런 movement 또한 mapping 으로 새롭게 지정할 수 있다.
+
+=begin html
+
+<pre><code class='vim hljs'>
+:onoremap p i(
+</code></pre>
+
+=end html
+
+이제 ( conditions of if or parameters of function ) 이라는 문구를 insert mode 로 작성하고
+괄호 안에서 cp 를 입력하면 괄호의 모든 내용이 사라지는 것을 볼 수 있다.
+
+이는 앞서 봤었던 movement i( 가 p 로 바뀐 것이다.
+
+=head2 Changing the Start
+
+이 동작은 현재 커서의 위치를 기준으로 동작하게 되는데, 이 시작점을 바꿀 수는 없을까? 물론 가능하다.
+
+=begin html
+
+<pre><code class='vim hljs'>
+:onoremap in( :<c-u>normal! f(vi(<cr>
+</code></pre>
+
+=end html
+
+위의 movement 를 적용하면 커서의 시작점이 지금의 위치가 아닌 다음에 발견되는 괄호의 위치가 된다.
+
+명령어를 하나하나 살펴보자.
+
+=over 4
+
+=item * <c-u>
+
+여기에서는 설명하지 않는다.
+
+=item * :normal!
+
+뒤따라오는 명령을 normal mode 에서 실행하는 것처럼 동작하게 한다.
+
+=item * f(vi(<cr>
+
+현재 라인에서 가장 처음 발견되는 괄호를 찾는다. 그리고 그 위치에서 visual mode 로 괄호 안의 (inside) 내용들을 선택한다.
+
+=back
+
+f 를 F 로 바꾸면 현재 커서보다 앞에 있는 괄호를 선택하는 것도 가능하다.
+
+=head2 General Rules
+
+movement 의 동작은 다음 두 가지 경우를 생각하면 된다.
+
+=over 4
+
+=item * visual mode 를 사용하는 경우. operator 의 동작은 선택된 텍스트에 대해서 동작한다.
+
+=item * 그 외. 처음 커서의 위치에서 movement 에 의해 이동된 커서의 사이에 위치한 텍스트에 대해서 동작한다.
+
+=back
+
+=head1 More Operator-Pending Mappings
+
+operator 와 그 movement 는 vim 에서 가장 중요한 것 중 하나다. 이번에는 새로운 동작을 만들어보려고 한다.
+
+다음과 같은 markdown 문서가 있다.
+
+    Topic One
+    =========
+
+    This is some text about topic one
+
+    it has multiple paragraphs
+
+    Topic Two
+    =========
+
+    This is some text about topic two. It has only one paragraph.
+
+그리고 다음 명령을 등록한 다음 cih 를 눌러보자.
+
+=begin html
+
+<pre><code class=' hljs'>
+onoremap ih :<c-u>execute "normal! ?^==.*$\r:nohlsearch\rkvg_"<cr>
+</code></pre>
+
+=end html
+
+그러면 ==... 의 상단 텍스트가 사라질것이다.
+
+각각을 분리해서 생각해보자.
+
+=over 4
+
+=item * onoremap ih
+
+movement 를 등록한다.
+
+=item * <c-u>
+
+여기에서도 무시하고 넘어가도록 하자.
+
+=item * :execute "..."
+
+"..." 명령을 실행시키는데 이때 \r 같은 특수한 문자들을 <cr> 처럼 치환한다. I<normal!> 은 <cr> 과 같은 특수문자를 읽지 못하기 때문에 필요하다.
+
+=item * normal!
+
+normal 모드로 다음에 오는 명령을 실행한다.
+
+=item * ?^==.*$
+
+regex 로, ==로 시작하는 줄을 찾는데 이때 찾는 방향은 역방향이다.
+
+=item * :nohlsearch
+
+바로 위에서 찾은 문자의 하이라이팅을 끈다.
+
+=item * kvg_
+
+=== 가 들어간 줄을 찾았으니 이제 그 위의 텍스트를 선택하기 위해 커서를 위로 올리고 visual mode 로 라인의 끝까지 선택한다.
+
+=back
+
+=head1 Status Lines
+
+status line 을 변경해보자.
+
+status line 이 보이지 않는다면, 다음의 설정을 입력하자.
+
+=begin html
+
+<pre><code class='vim hljs'>
+:set laststatus=2
+</code></pre>
+
+=end html
+
+다음을 입력하면 status line 이 변경될 것이다.
+
+=begin html
+
+<pre><code class='vim hljs'>
+:set statusline=%f\ -\ FileType:\ %y
+</code></pre>
+
+=end html
+
+다음처럼 여러 줄에 걸쳐 값을 추가해줄 수도 있다.
+
+=begin html
+
+
+<pre><code class='vim hljs'>
+:set statusline=%l
+:set statusline+=/
+:set statusline+=%L
+</code></pre>
+
+=end html
+
+=head1 Execute
+
+=begin html
+
+<pre><code class='vim hljs'>
+:execute "vsp " . bufname("#")
+</code></pre>
+
+=end html
+
+. 는 concat string operator 이고, bufname() 은 함수다.
+
+buffer 에 저장된 파일명을 새롭게 불러오는 기능을 한다.
+
+=head1 Normal
+
+=begin html
+
+<pre><code class='vim hljs'>
+:nnoremap G dd
+:normal G
+</code></pre>
+
+=end html
+
+두 번째 커맨드는 첫 번째 mapping 에 영향을 받아 한 줄을 삭제할 것이다.
+
+mapping 을 막기 위해 사용되는 것이 B<I<normal!>> 이다
+
+normal 을 쓴다면 항상 normal! 을 쓰도록 하자.
+
+=head1 Execute Normal!
+
+=begin html
+
+<pre><code class='vim hljs'>
+:execute "normal! gg/foo\<cr>dd"
+</code></pre>
+
+=end html
+
+문자열에서 <cr> 를 carrige return 으로 인식시키기 위해서는 
+double quote 로 감싸야한다.
+
+=head2 Execute Normal! with Regex
+
+execute 의 double quote 에서 정규표현식을 사용하기 위해서는 
+.\\+ 처럼 작성되어야 한다.
+
+이를 벗어나기 위해서 single quote 를 사용하면 된다.
+
+=begin html
+
+<pre><code class='vim hljs'>
+:execute 'normal! gg/for .\+ in .\+:\<cr>'
+</code></pre>
+
+=end html
+
+하지만 여기에서 주의할 점은 double quote 와는 달리
+<cr> 가 문자 그대로 인식된다는 점이다.
+
+이는 다음과 같은 방법으로 해결 가능하다.
+
+=begin html
+
+<pre><code class='vim hljs'>
+:execute "normal! gg" . '/for .\+ in .\+' . "\<cr>"
+</code></pre>
+
+=end html
+
+single quote 에는 정규표현식이 포함된 문자열을, 
+double quote 에는 그 외의 것들을 넣어주고 이들을 concatnate 한다.
+
+.\+ 형태가 싫고 .+ 를 쓰고 싶다면
+
+B<'/\vfor .+ in .+'>
+
+처럼 \v 를 명시해주면 vim 이 regex mode 로 파싱하게 된다.
 
 =cut
