--- a/public/post/Vim/todo.pod
+++ b/public/post/Vim/todo.pod
@@ -10,13 +10,22 @@ todo
 
 사용하기에 아직 이해가 부족하면 (X)와 함께 이유를 달아놓는다.
 
-=head1 netrw
+=head1 :Lex
 
-=over 4
-
-=item :Lex - 왼쪽에 파일탐색기 버퍼가 열리면서 파일을 선택하면 오른쪽에서 파일이 열린다. (X)
+왼쪽에 파일탐색기 버퍼가 열리면서 파일을 선택하면 오른쪽에서 파일이 열린다. (X)
 
 파일 탐색기의 디렉토리를 expand 하고 싶은데 방법이 없을까?
+
+vim -R 모드로 파일을 여는 방법이 필요하다.
+
+=head1 :set statusline=
+
+옵션들 쭉 읽어보고 적용해볼만한 것 추가해보기.
+
+:set statusline=%F%m%r%h%w%=(%{&ff}/%Y)\ (line\ %l\/%L,\ col\ %c)
+
+일단 이걸 추천해주긴 하던데?
+
 
 
 =cut
